# res://main.gd
extends Node2D

const SAVE_PATH = "user://my_hex_world.tres"

@onready var view_controller = $ViewStackController
@onready var map_viewer = $HexMapViewer # éœ€è¦èƒ½è®¿é—®åˆ° map_viewer
@onready var save_menu = $SaveLoadMenu
@onready var move_dialog = $MoveDialog
@onready var move_option = $MoveDialog/VBoxContainer/MoveOption

func _ready():
	# 1. World
	var world = RegionData.new()
	world.name = "Azeroth"
	world.type = RegionData.Type.WORLD
	
	# 2. Nation (Khaz Modan) - ä½äºå·¦ä¾§
	var nation_a = RegionData.new()
	nation_a.name = "Khaz Modan"
	nation_a.type = RegionData.Type.NATION
	nation_a.map_color = Color.RED
	
	# ç»™ Nation A åŠ ç‚¹æ ¼å­ (å·¦è¾¹çš„ä¸€å›¢)
	for q in range(-4, -1):
		for r in range(-2, 2):
			nation_a.add_hex(q, r)
			
	world.add_child(nation_a)
	
	# 3. Nation (Lordaeron) - ä½äºå³ä¾§
	var nation_b = RegionData.new()
	nation_b.name = "Lordaeron"
	nation_b.type = RegionData.Type.NATION
	nation_b.map_color = Color.BLUE
	
	# ç»™ Nation B åŠ ç‚¹æ ¼å­ (å³è¾¹çš„ä¸€å›¢)
	for q in range(2, 5):
		for r in range(-2, 2):
			nation_b.add_hex(q, r)
			
	world.add_child(nation_b)
	
		# --- æ–°å¢è¿æ¥é€»è¾‘ ---
	# 1. è¿æ¥ç¼–è¾‘å™¨
	# å¯åŠ¨ï¼
	SessionManager.current_world = world
	SessionManager.world_loaded.emit(world)

	# 3. âœ… ä¿®æ”¹ç”Ÿæˆå™¨è¿çº¿
	# ä»¥å‰ï¼šmap_ui.generate_requested.connect(_on_generate_requested)
	# ç°åœ¨ï¼šç›‘å¬æ€»çº¿
	SignalBus.request_generate_map.connect(_on_generate_requested)
	# 4. âœ… ä¿®æ”¹ç³»ç»Ÿèœå•è¿çº¿ (å¦‚æœåœ¨ TopBar ä¹Ÿæœ‰å…¥å£çš„è¯)
	SignalBus.request_system_menu.connect(save_menu.open_menu)
	
	# é‡æ–°è¿æ¥æ–°å»ºåŒºåŸŸè¯·æ±‚
	SignalBus.request_create_region.connect(_on_create_region)
	
	# 1. ç›‘å¬æ¥è‡ª LensBar çš„è¯·æ±‚
	SignalBus.request_move_dialog.connect(_prepare_move_dialog)
	# 2. ç›‘å¬å¼¹çª—ç¡®è®¤
	move_dialog.confirmed.connect(_on_move_dialog_confirmed)

	# 1. å°è¯•åŠ è½½å­˜æ¡£
	if FileAccess.file_exists(SAVE_PATH):
		print("å‘ç°å­˜æ¡£ï¼Œæ­£åœ¨åŠ è½½...")
		SessionManager.load_world(SAVE_PATH)
	else:
		print("æœªå‘ç°å­˜æ¡£ï¼Œåˆå§‹åŒ–æ–°ä¸–ç•Œ...")
		_init_new_world()

# å‡†å¤‡å¹¶å¼¹å‡ºçª—å£
func _prepare_move_dialog():
	# æ£€æŸ¥æ˜¯å¦é€‰ä¸­äº†æ ¼å­
	var selected = map_viewer.get_selected_cells()
	if selected.is_empty():
		print("æœªé€‰ä¸­ä»»ä½•æ ¼å­") # ä»¥åå¯ä»¥ç”¨ Toast æç¤º
		return

	# æ£€æŸ¥æ˜¯å¦æœ‰å­åŒºåŸŸ
	var current_region = view_controller.stack.back()
	if current_region.children.is_empty():
		print("æ²¡æœ‰å¯ç§»åŠ¨çš„ç›®æ ‡åŒºåŸŸ")
		return

	# å¡«å……ä¸‹æ‹‰æ¡†
	move_option.clear()
	for i in range(current_region.children.size()):
		var child = current_region.children[i]
		move_option.add_item(child.name, i) # ID å¯¹åº”ç´¢å¼•
	
	# å¼¹å‡ºçª—å£
	move_dialog.popup_centered()

# UI å“åº”ï¼šç”¨æˆ·ç‚¹äº†ç¡®å®š
func _on_move_dialog_confirmed():
	# è·å–ç”¨æˆ·é€‰äº†ç¬¬å‡ ä¸ª
	var index = move_option.selected
	if index == -1: return
	
	# è°ƒç”¨æ ¸å¿ƒé€»è¾‘
	_on_move_to_confirmed(index)

# æ ¸å¿ƒé€»è¾‘ï¼šæ‰§è¡Œæ•°æ®ç§»åŠ¨
func _on_move_to_confirmed(child_index: int):
	var current_region = view_controller.stack.back()
	var target_region = current_region.children[child_index]
	var selected_coords = map_viewer.get_selected_cells()
	
	print("Moving %d hexes to %s" % [selected_coords.size(), target_region.name])
	
	# 1. æ•°æ®è¿ç§»
	for coord in selected_coords:
		# ä½¿ç”¨ä¹‹å‰åŠ çš„ get_hex è¾…åŠ©å‡½æ•°
		var cell = current_region.get_hex(coord.x, coord.y)
		if cell:
			current_region.remove_hex(coord.x, coord.y) # ä»å½“å‰å±‚æ‹¿èµ°
			target_region.hex_cells.append(cell)        # ç»™ç›®æ ‡å±‚
	
	# 2. åˆ·æ–°è§†å›¾
	map_viewer.clear_selection()
	map_viewer._refresh_tiles() # åˆ·æ–°è´´å›¾
	map_viewer.queue_redraw()   # åˆ·æ–°çº¿æ¡†
	
	# 3. é€šçŸ¥å…¶ä»– UI (æ¯”å¦‚å¤§çº²) æ•°æ®å˜äº†
	SignalBus.map_data_modified.emit()

# æŠŠä¹‹å‰çš„æµ‹è¯•æ•°æ®ç”Ÿæˆé€»è¾‘å°è£…åˆ°è¿™é‡Œ
func _init_new_world():
	var world = RegionData.new()
	world.name = "New World"
	world.type = RegionData.Type.WORLD
	
	# (å¯é€‰) å¯ä»¥åœ¨è¿™é‡Œç”Ÿæˆä¸€ç‚¹åˆå§‹æ•°æ®ï¼Œæ¯”å¦‚ä¸€ä¸ªç©ºçš„ World
	
	SessionManager.current_world = world
	SessionManager.world_loaded.emit(world)

# ç”Ÿæˆå›è°ƒ
func _on_generate_requested():
	# 1. è·å–å½“å‰æ‰€åœ¨çš„åŒºåŸŸå±‚çº§
	# (æ³¨æ„ï¼šæˆ‘ä»¬åº”è¯¥ç”Ÿæˆåœ¨å½“å‰å±‚çº§ï¼Œè¿˜æ˜¯åªå…è®¸åœ¨ World å±‚çº§ç”Ÿæˆï¼Ÿ)
	# ç›®å‰é€»è¾‘ï¼šç”Ÿæˆåœ¨å½“å‰ä½ çœ‹åˆ°çš„è¿™ä¸€å±‚
	var current_region = view_controller.stack.back()
	
	if not current_region: return
	
	# --- æ–°å¢é™åˆ¶ ---
	# åªå…è®¸åœ¨å®è§‚å±‚çº§ç”Ÿæˆ
	if current_region.type == RegionData.Type.PROVINCE or \
	   current_region.type == RegionData.Type.CITY or \
	   current_region.type == RegionData.Type.HEX_CELL:
		print("å½“å‰å±‚çº§ä¸æ”¯æŒç”Ÿæˆå¤§é™†åœ°å½¢ã€‚")
		# å¯ä»¥åœ¨è¿™é‡Œå¼¹å‡ºä¸€ä¸ª AcceptDialog æç¤ºç”¨æˆ·
		return
	
	# 2. ç¡®è®¤å¼¹çª— (å¯é€‰ï¼Œé˜²æ­¢è¯¯åˆ )
	# æš‚æ—¶ç•¥è¿‡ï¼Œç›´æ¥ç”Ÿæˆ
	
	# 3. è°ƒç”¨ç”Ÿæˆå™¨
	# åŠå¾„è®¾ä¸º 15 (çº¦ 700 ä¸ªæ ¼å­)ï¼Œç§å­éšæœº
	var radius = 15
	var seed_val = randi()
	
	print("å¼€å§‹åœ¨åŒºåŸŸ [%s] ç”Ÿæˆåœ°å½¢..." % current_region.name)
	MapGenerator.generate_island(current_region, radius, seed_val)
	
	# 4. åˆ·æ–°è§†å›¾
	# å¦‚æœå½“å‰åœ¨çœ‹ Political æ¨¡å¼ï¼Œå¯èƒ½çœ‹ä¸å‡ºåœ°å½¢å˜åŒ–ï¼Œå¼ºåˆ‡åˆ° Physical
	map_viewer.set_view_mode(HexMapViewer.ViewMode.PHYSICAL)
	# å¦‚æœ UI ä¸‹æ‹‰æ¡†æ²¡å˜ï¼Œè¿™é‡Œå¯èƒ½ä¼šå¯¼è‡´ UI å’Œ å®é™…æ¨¡å¼ ä¸ä¸€è‡´ï¼Œä¸¥æ ¼æ¥è¯´åº”è¯¥æ›´æ–° UI çŠ¶æ€
	# ç®€å•èµ·è§ï¼Œåªåˆ·æ–°ç”»é¢
	map_viewer.queue_redraw()
	
	# 5. æç¤ºä¿å­˜
	print("ç”Ÿæˆå®Œæ¯•ï¼")

# --- æ ¸å¿ƒï¼šåˆ›å»ºæ–°åŒºåŸŸé€»è¾‘ ---
func _on_create_region():
	var current_region = SessionManager.current_world # è¿™æ˜¯ä¸€ä¸ª Bugï¼Œéœ€è¦è·å–å½“å‰ ViewStack çš„æ ˆé¡¶
	# ä¿®æ­£ï¼šæˆ‘ä»¬éœ€è¦ä» ViewController è·å–å½“å‰æ‰€åœ¨å±‚çº§
	current_region = view_controller.stack.back()
	
	var selected_coords = map_viewer.get_selected_cells()
	if selected_coords.is_empty(): return
	
	print("æ­£åœ¨ä» %d ä¸ªæ ¼å­åˆ›å»ºæ–°åŒºåŸŸ..." % selected_coords.size())
	
	# 1. åˆ›å»ºæ–°åŒºåŸŸå¯¹è±¡
	var new_region = RegionData.new()
	new_region.name = "New Region " + str(randi() % 100)
	# è‡ªåŠ¨åˆ¤æ–­ç±»å‹ï¼šå¦‚æœæ˜¯ World å±‚çº§ï¼Œåˆ›å»º Nationï¼›å¦‚æœæ˜¯ Nationï¼Œåˆ›å»º Province
	new_region.type = _get_next_type(current_region.type)
	new_region.map_color = Color(randf(), randf(), randf()) # éšæœºé¢œè‰²
	
	# 2. è¿ç§»æ ¼å­æ•°æ®
	for coord in selected_coords:
		# 2.1 ä»åŸåŒºåŸŸæ‰¾åˆ°é‚£ä¸ªå…·ä½“çš„ HexCell å¯¹è±¡
		var original_cell = current_region.get_hex(coord.x, coord.y) # éœ€è¦å» RegionData åŠ è¿™ä¸ª helper
	
		if original_cell:
			# 2.2 ä»åŸåŒºåŸŸç§»é™¤å¼•ç”¨
			current_region.remove_hex(coord.x, coord.y)
			
			# 2.3 æ·»åŠ åˆ°æ–°åŒºåŸŸ (ç›´æ¥æ·»åŠ å¯¹è±¡ï¼Œè€Œä¸æ˜¯ new)
			new_region.hex_cells.append(original_cell)
	
	# 3. å»ºç«‹å±‚çº§å…³ç³»
	current_region.add_child(new_region)
	
	# 4. æ”¶å°¾
	map_viewer.clear_selection()
	map_viewer.region_modified.emit() # é€šçŸ¥é‡ç»˜
	
	# ğŸ”´ å…³é”®ä¿®å¤ï¼šæ·»åŠ è¿™è¡Œï¼é€šçŸ¥ Outliner åˆ·æ–°æ ‘
	SignalBus.map_data_modified.emit() 
	
	# 5. è‡ªåŠ¨è¿›å…¥æ–°åŒºåŸŸç¼–è¾‘ (å¯é€‰)
	# view_controller._push_view(new_region) # è¿™ä¸€æ­¥éœ€è¦æŠŠ _push_view å…¬å¼€ï¼Œæˆ–è€…ä¸è·³è½¬

	print("æ–°å»ºåŒºåŸŸå®Œæˆ: ", new_region.name)
	
# è¾…åŠ©ï¼šè·å–ä¸‹ä¸€çº§ç±»å‹
func _get_next_type(current: RegionData.Type) -> RegionData.Type:
	match current:
		RegionData.Type.WORLD: return RegionData.Type.NATION
		RegionData.Type.NATION: return RegionData.Type.PROVINCE
		RegionData.Type.PROVINCE: return RegionData.Type.CITY
		_: return RegionData.Type.PROVINCE

func _unhandled_input(event: InputEvent):
	# ç›‘å¬ Ctrl + S
	if event.is_action_pressed("save"):
		_perform_quick_save()
		
	if event.is_action_pressed("ui_cancel"): # é»˜è®¤æ˜¯ ESC
	# å¦‚æœèœå•æ²¡æ‰“å¼€ï¼Œå°±æ‰“å¼€å®ƒ
		if not save_menu.visible:
			save_menu.open_menu()
			
	# --- æ–°å¢ï¼šDebug å¿«æ·é”® ---
	if event.is_action_pressed("toggle_debug"):
		# åˆ‡æ¢ Viewer é‡Œçš„å¼€å…³å˜é‡
		map_viewer.show_debug_coords = not map_viewer.show_debug_coords
		map_viewer.queue_redraw()
		
		# å¯é€‰ï¼šæ‰“å°æç¤º
		print("Debug Coordinates: ", map_viewer.show_debug_coords)

func _perform_quick_save():
	# 1. å¦‚æœå½“å‰æœ‰å·²çŸ¥çš„å­˜æ¡£è·¯å¾„ -> ç›´æ¥è¦†ç›–ä¿å­˜
	if SessionManager.current_file_path != "":
		SessionManager.save_world(SessionManager.current_file_path)
		
		# å¯é€‰ï¼šç»™ä¸ªè½»æç¤º (Toast)ï¼Œæˆ–è€…ç®€å•æ‰“å°
		print("å¿«é€Ÿä¿å­˜æˆåŠŸ: ", SessionManager.current_file_path)
		
		# ç”šè‡³å¯ä»¥å¤ç”¨ SaveLoadMenu é‡Œçš„ ConfirmDialog æ¥æç¤ºæˆåŠŸï¼Œ
		# æˆ–è€…åœ¨ Main é‡ŒåŠ ä¸€ä¸ªç®€å•çš„ Label é—ªç°ä¸€ä¸‹ "Saved!"
		
	# 2. å¦‚æœæ˜¯æ–°å»ºçš„ä¸–ç•Œ (è¿˜æ²¡å­˜è¿‡ç›˜) -> æ‰“å¼€å­˜æ¡£èœå•
	else:
		save_menu.open_menu()
